refactor: Use repo to check keyword/category table existence